--- a/cool.HTML
+++ b/cool.HTML
@@ -10,14 +10,14 @@
 
     <header>
         <div class="logo">
-        <img src="D:\melancolia.png">
+        <img src= melancolia.png>
 
             <h1>Rosas Eternas</h1>
             <p>La belleza que perdura</p>
         </div>
         <nav>
             <ul class="navbar">
-                <li><a href="MO.html">Inicio</a></li>
+                <li><a href="cool.html">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -34,13 +34,13 @@
     <section id="productos" class="productos">
         <h2>Nuestros Productos mas destacados</h2>
         <div class="producto-card">
-            <img src= "D:\ar.jpg"alt="Rosa Eterna Roja">
+            <img src= ar.jpg alt="Rosa Eterna Roja">
             <h3>Rosa Eterna Roja</h3>
             <p>Un símbolo de amor eterno, perfecto para cualquier ocasión especial.</p>
             <button><a href="mil.html">♥♥♥</a></button>
         </div>
         <div class="producto-card">
-            <img src="D:\etg.jpg" alt="Rosa Eterna Rosa">
+            <img src=etg.jpg alt="Rosa Eterna Rosa">
             <h3>Rosa Eterna Rosa</h3>
             <p>Elegancia y frescura que perduran para siempre.</p>
             <button><a href="mor.html">♥♥♥</a></button>
