--- a/contacto.html
+++ b/contacto.html
@@ -10,14 +10,14 @@
 <body>
 	 <header>
         <div class="logo">
-        <img src="D:\melancolia.png">
+        <img src= melancolia.png>
 
             <h1>Rosas Eternas</h1>
             <p>La belleza que perdura</p>
         </div>
         <nav>
             <ul class="navbar">
-                <li><a href="MO.html">Inicio</a></li>
+                <li><a href="cool.html">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
