--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        <b><i > <h1>Rosas Eternas</h1></i></b>
         <nav>
             <ul class="navbar">
-                <li><a href="cool.html">Inicio</a></li>
+                <li><a href="cool.HTML">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
            <li><a href="contacto.html">Contacto</a></li>      
             </ul>
