--- a/cool.HTML
+++ b/cool.HTML
@@ -17,7 +17,7 @@
         </div>
         <nav>
             <ul class="navbar">
-                <li><a href="cool.html">Inicio</a></li>
+                <li><a href="cool.HTML">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
