--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	 <header>
-        <div class="logo">
+        <div class="contenedor-img">
         <img src= melancolia.png>
 
             <h1>Rosas Eternas</h1>
