--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
    <center><h1>CATALOGO</h1></center> 
     
     <header>
+                <div class="contenedor-img">
+
         <img src= melancolia.png>
        <b><i > <h1>Rosas Eternas</h1></i></b>
         <nav>
@@ -31,6 +33,7 @@
             </ul>
         </nav>
     </header>
+</div>
 
     <section id="Lista">
           <div class="categorias-lista">
