--- a/mil.html
+++ b/mil.html
@@ -9,11 +9,14 @@
 </head>
 <body>
   <center>  <h2>Nuestros Productos mas destacados</h2>
-        <div class="producto-card">
-            <img class= "img" src="D:\ar.jpg"alt="Rosa Eterna Roja">
+                <div class="contenedor-img">
+
+            <img  src= ar.jpg alt="Rosa Eterna Roja">
+		</div>
             <h3>Rosa Eterna Roja</h3>
             <p>Un símbolo de amor eterno, perfecto para cualquier ocasión especial.</p></center>
-                        <button><a href="MO.html">Regresar</a></button>
+                        <button><a href="cool.HTML">Regresar</a></button>
+
 
 </body>
 </html>
