--- a/mor.html
+++ b/mor.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <center>  <h2>Nuestros Productos mas destacados</h2>
-        <div class="producto-card">
-            <img class= "img" src="D:\etg.jpg"alt="Rosa Eterna Roja">
+        <div class="contenedor-img">
+            <img src= etg.jpg alt="Rosa Eterna Roja">
             <h3>Rosa Eterna Roja</h3>
             <p>Un símbolo de amor eterno, perfecto para cualquier ocasión especial.</p></center>
-                                    <button><a href="MO.html">Regresar</a></button>
+                                    <button><a href="cool.html">Regresar</a></button>
 
 </body>
 </html>
