--- a/mor.html
+++ b/mor.html
@@ -7,9 +7,11 @@
 		    <link rel="stylesheet" href="mirom.css">
 
 </head>
-<body>
+<body> 
+	<div class="contenedor-img">
+		<img
   <center>  <h2>Nuestros Productos mas destacados</h2>
-        <div class="contenedor-img">
+        
 		
             <img src= etg.jpg alt="Rosa Eterna Roja">
             <h3>Rosa Eterna Roja</h3>
