--- a/mor.html
+++ b/mor.html
@@ -15,7 +15,7 @@
             <img src= etg.jpg alt="Rosa Eterna Roja">
             <h3>Rosa Eterna Roja</h3>
             <p>Un símbolo de amor eterno, perfecto para cualquier ocasión especial.</p></center>
-                                    <button><a href="cool.html">Regresar</a></button>
+                                    <button><a href="cool.HTML">Regresar</a></button>
 
 </body>
 </html>
