--- a/index.html
+++ b/index.html
@@ -40,11 +40,15 @@
           <div class="categorias-lista">
 
             <div class="categoria">
+                    <section class="producto">
+
                 <img src= ar.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
-                <p>$390.00</p>
+      <p class="precio">$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
                 <div id="detalles-1" class="detalles">
+                          <button onclick="agregarAlCarrito('Ramo de rosas rojas', 390)">Agregar al carrito</button>
+
                     <p><strong>Descripción:</strong> 14 rosas rojas con papel coreano rojo y dorado y una mariposa dorada.</p>
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
@@ -54,8 +58,10 @@
             <div class="categoria">
                 <img src= dfgh.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
-                <p>$390.00</p>
+      <p class="precio">$500.00</p>
                 <button onclick="toggleDetails('detalles-2')">Ver detalles</button>
+                      <button onclick="agregarAlCarrito('Ramo de rosas rojas', 390)">Agregar al carrito</button>
+
                 <div id="detalles-2" class="detalles">
                     <p><strong>Descripción:</strong> 14 rosas rojas con papel coreano rojo y dorado y una mariposa dorada.</p>
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
