--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <div class="categorias-lista">
 
             <div class="categoria">
+                <main>
                     <section class="producto">
 
                 <img src= ar.jpg alt="Ramo de Rosas Rojas">
@@ -302,6 +303,7 @@
                 </div>
             </div>
     </section>
+                        </main>
   <footer id="contacto">
  <center> <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p></center></body>
 </html>
