--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div> 
+            </div> </section>
+                    <section class="producto">
 
             <div class="categoria">
                 <img src= dfgh.jpg alt="Ramo de Rosas Rojas">
@@ -68,7 +69,7 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div> 
+            </div></section>
 
             <div class="categoria">
                 <img src= dg.jpg alt="Ramo de Rosas Rojas">
@@ -304,6 +305,11 @@
             </div>
     </section>
                         </main>
+                 <section id="carrito">
+    <h2>🛒 Carrito de Compras</h2>
+    <ul id="lista-carrito"></ul>
+    <p><strong>Total:</strong> $<span id="total">0.00</span></p>
+  </section>
   <footer id="contacto">
  <center> <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p></center></body>
 </html>
