--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div> </section>
+            </div>
 
             <div class="categoria">
-                                    <section class="producto">
 
                 <img src= dfgh.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
@@ -67,7 +66,7 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div></section>
+            </div>
 
             <div class="categoria">
                 <img src= dg.jpg alt="Ramo de Rosas Rojas">
