--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="categorias-lista">
 
             <div class="categoria">
-                <img src= "D:\ar.jpg" alt="Ramo de Rosas Rojas">
+                <img src= ar.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -45,10 +45,10 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div> 
 
             <div class="categoria">
-                <img src= "D:\dfgh.jpg" alt="Ramo de Rosas Rojas">
+                <img src= dfgh.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -57,7 +57,7 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div>  
 
             <div class="categoria">
                 <img src="D:\dg.jpg" alt="Ramo de Rosas Rojas">
@@ -72,7 +72,7 @@
             </div>  <div class="categorias-lista">
 
             <div class="categoria">
-                <img src= "D:\eg.jpg" alt="Ramo de Rosas Rojas">
+                <img src= eg.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -81,10 +81,10 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div>  
 
             <div class="categoria">
-                <img src= "D:\er.jpg" alt="Ramo de Rosas Rojas">
+                <img src= er.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -93,10 +93,10 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div>  
 
             <div class="categoria">
-                <img src= "D:\erg.jpg" alt="Ramo de Rosas Rojas">
+                <img src= erg.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -105,10 +105,10 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div>  
 
             <div class="categoria">
-                <img src= "D:\et.jpg" alt="Ramo de Rosas Rojas">
+                <img src= et.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -117,7 +117,7 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div> 
 
             <div class="categoria">
                 <img src= "D:\etg.jpg" alt="Ramo de Rosas Rojas">
@@ -129,10 +129,10 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div>  
 
             <div class="categoria">
-                <img src= "D:\f.png" alt="Ramo de Rosas Rojas">
+                <img src= f.png alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -141,10 +141,10 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
+            </div> 
 
             <div class="categoria">
-                <img src= "D:\gj.jpg"alt="Ramo de Rosas Rojas">
+                <img src= gj.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -153,10 +153,9 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
-
+            </div> 
             <div class="categoria">
-                <img src= "D:\hg.jpg" alt="Ramo de Rosas Rojas">
+                <img src= hg.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -165,10 +164,9 @@
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
-            </div>  <div class="categorias-lista">
-
+            </div> 
             <div class="categoria">
-                <img src= "D:\iuytgrftyu.jpg"alt="Ramo de Rosas Rojas">
+                <img src= iuytgrftyu.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -179,10 +177,9 @@
                 </div>
             </div>v
      
-        <div class="categorias-lista">
 
             <div class="categoria">
-                <img src= "D:\kg.jpg" alt="Ramo de Rosas Rojas">
+                <img src= kg.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
                 <p>$390.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
@@ -192,10 +189,9 @@
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
                 </div>
             </div>
-             <div class="categorias-lista">
 
             <div class="categoria">
-                <img src= "D:\kkkkk.jpg"  alt="Ramo de Rosas Amarillas">
+                <img src= kkkkk.jpg  alt="Ramo de Rosas Amarillas">
                 <h3>Ramo de rosas Amarillas </h3>
                 <p>$450.00</p>
                 <button onclick="toggleDetails('detalles-2')">Ver detalles</button>
@@ -205,10 +201,9 @@
                     <p><strong>Ramos disponibles:</strong> 150 ramos</p>
                 </div>
             </div>
-             <div class="categorias-lista">
 
             <div class="categoria">
-                <img src= "D:\l,;,;,.jpg"alt="girasoles bonitos">
+                <img src= l,;,;,.jpg alt="girasoles bonitos">
                 <h3>girasoles bonitos </h3>
                 <p>$150.00</p>
                 <button onclick="toggleDetails('detalles-3')">Ver detalles</button>
@@ -218,10 +213,9 @@
                     <p><strong>Ramos disponibles:</strong> 17 girasoles</p>
                 </div>
             </div>
-             <div class="categorias-lista">
-
+\
             <div class="categoria">
-                <img src= "D:\oi.jpg" alt="Un girasol bonito brillante">
+                <img src= oi.jpg alt="Un girasol bonito brillante">
                 <h3>Un girasol bonito brillante</h3>
                 <p>$90.00</p>
                 <button onclick="toggleDetails('detalles-4')">Ver detalles</button>
@@ -247,7 +241,7 @@
             </div>
 
             <div class="categoria">
-                <img src="D:\sg.jpg" alt="girasol">
+                <img src=sg.jpg alt="girasol">
                 <h3>Rosa eterna en pluma</h3>
                 <p>$100.00</p>
                 <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
@@ -259,7 +253,7 @@
                 </div>
             </div>
  <div class="categoria">
-                <img src="D:\th.jpg" alt="girasol">
+                <img src=th.jpg alt="girasol">
                 <h3>Rosa eterna en pluma</h3>
                 <p>$100.00</p>
                 <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
@@ -270,7 +264,7 @@
                     <p><strong>Colores de plumas y de rosas:</strong> azul , morado, verde,rojo,negro,celeste y rosado</p>
                 </div>
             </div> <div class="categoria">
-                <img src="D:\tyes.jpg" alt="girasol">
+                <img src=tyes.jpg alt="girasol">
                 <h3>Rosa eterna en pluma</h3>
                 <p>$100.00</p>
                 <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
@@ -281,7 +275,7 @@
                     <p><strong>Colores de plumas y de rosas:</strong> azul , morado, verde,rojo,negro,celeste y rosado</p>
                 </div>
             </div> <div class="categoria">
-                <img src="D:\ujh.jpg" alt="girasol">
+                <img src=ujh.jpg alt="girasol">
                 <h3>Rosa eterna en pluma</h3>
                 <p>$100.00</p>
                 <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
