--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
 <body>
    <center><h1>CATALOGO</h1></center> 
     
-    <header>
-        <img src="D:\melancolia.png">
-       <b><i > <h1>Rosas Eternas</h1></i></b>
+   
+	 <header>
+        <div class="contenedor-img">
+        <img src= melancolia.png>
+	</div>
+            <h1>Rosas Eternas</h1>
+            <p>La belleza que perdura</p>
+        
         <nav>
             <ul class="navbar">
                 <li><a href="cool.HTML">Inicio</a></li>
                 <li><a href="index.html">Productos</a></li>
-           <li><a href="contacto.html">Contacto</a></li>      
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
