--- a/index.html
+++ b/index.html
@@ -263,37 +263,41 @@
                 </div>
             </div>
  <div class="categoria">
-                <img src=th.jpg alt="girasol">
-                <h3>Rosa eterna en pluma</h3>
-                <p>$100.00</p>
-                <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
-                <div id="detalles-6" class="detalles">
-                     <p>SI lo compras el 14 de febrero y en 10 de marzo te lo damos a mitad de precio aprobecha </p>
-                    <p><strong>Descripción:</strong> un girasol hermosa para tu persona favorita</p>
-                    <p><strong>Material:</strong> liston amarillo,liston rosa,liston verde ,cinta verde, tul adiamantado, fomi adiamantado, luces bonitas,papel coreano negro y una mariposa plateada </p>
-                    <p><strong>Colores de plumas y de rosas:</strong> azul , morado, verde,rojo,negro,celeste y rosado</p>
+                <img src=th.jpg alt="Ramo de rosas rojas">
+                <h3>Ramo de rosas rojas</h3>
+      <p class="precio">$455</p>
+                <button onclick="toggleDetails('detalles-19')">Ver detalles</button>
+	 		    		    	        <button onclick="agregarAlCarrito('Ramo de rosas rojas', 50)">Agregar al carrito</button>
+
+                <div id="detalles-19" class="detalles">
+                    <p><strong>Descripción:</strong> Un ramo de rosas rojas , hermosas para una ocacion especial</p>
+                    <p><strong>Material:</strong> liston rojo, tul adiamantado, palitos de madera, mariposa dorada  y  papel coreano rojo con delineado dorado </p>
+                    <p><strong>Ramos disponibles:</strong>2</p>
                 </div>
             </div> <div class="categoria">
                 <img src=tyes.jpg alt="girasol">
-                <h3>Rosa eterna en pluma</h3>
-                <p>$100.00</p>
-                <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
-                <div id="detalles-6" class="detalles">
-                     <p>SI lo compras el 14 de febrero y en 10 de marzo te lo damos a mitad de precio aprobecha </p>
+                <h3>girasol</h3>
+      <p class="precio">$110</p>
+                <button onclick="toggleDetails('detalles-20')">Ver detalles</button>
+		    		    	        <button onclick="agregarAlCarrito('girasol', 110)">Agregar al carrito</button>
+
+                <div id="detalles-20" class="detalles">
                     <p><strong>Descripción:</strong> un girasol hermosa para tu persona favorita</p>
-                    <p><strong>Material:</strong> liston amarillo,liston rosa,liston verde ,cinta verde, tul adiamantado, fomi adiamantado, luces bonitas,papel coreano negro y una mariposa plateada </p>
-                    <p><strong>Colores de plumas y de rosas:</strong> azul , morado, verde,rojo,negro,celeste y rosado</p>
+                    <p><strong>Material:</strong> liston amarillo,liston verde ,cinta verde, fomi adiamantado, luces bonitas y una mariposa plateada </p>
+                    <p><strong>girasoles disponibles:</strong> 6 </p>
                 </div>
             </div> <div class="categoria">
-                <img src=ujh.jpg alt="girasol">
-                <h3>Rosa eterna en pluma</h3>
-                <p>$100.00</p>
-                <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
-                <div id="detalles-6" class="detalles">
+                <img src=ujh.jpg alt="Flor individual">
+                <h3>Flor individual</h3>
+                <p class="precio">$50.00</p>
+                <button onclick="toggleDetails('detalles-21')">Ver detalles</button>
+		    	        <button onclick="agregarAlCarrito('Flor individual', 50)">Agregar al carrito</button>
+
+                <div id="detalles-21" class="detalles">
                      <p>SI lo compras el 14 de febrero y en 10 de marzo te lo damos a mitad de precio aprobecha </p>
-                    <p><strong>Descripción:</strong> un girasol hermosa para tu persona favorita</p>
-                    <p><strong>Material:</strong> liston amarillo,liston rosa,liston verde ,cinta verde, tul adiamantado, fomi adiamantado, luces bonitas,papel coreano negro y una mariposa plateada </p>
-                    <p><strong>Colores de plumas y de rosas:</strong> azul , morado, verde,rojo,negro,celeste y rosado</p>
+                    <p><strong>Descripción:</strong> una flor blanca con decorado azul hermosa para tu persona favorita</p>
+                    <p><strong>Material:</strong> liston blanco,tul,papael coreano celeste y dorado </p>
+                    <p><strong>Rosas disponibles:</strong> 5 </p>
                 </div>
             </div>
     </section>
