--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <div id="detalles-1" class="detalles">
 	        <button onclick="agregarAlCarrito('Ramo de rosas convinadas', 380)">Agregar al carrito</button>
 
-                    <p><strong>Descripción:</strong> 6 rosas,2 rojas,2 rosas,2 blancas, con papel coreano negro y esquinas trasparentes , y una mariposa tornasol.</p>
+                  <center> <p><strong>Descripción:</strong> 6 rosas,2 rojas,2 rosas,2 blancas, con papel coreano negro y esquinas trasparentes , y una mariposa tornasol.</p>
                     <p><strong>Material:</strong>liston rojo,blanco y rosado,palos de madera,unicel,luces,perlitas,mariposa tornasol y papel coreano </p>
-                    <p><strong>Ramos disponibles:</strong> 10 </p>
+                    <p><strong>Ramos disponibles:</strong> 10 </p></center>
                 </div>
             </div> 
 
