--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                 <img src= dfgh.jpg alt="Un girasol Rosita">
                 <h3>Un girasol</h3>
       <p class="precio">$80.00</p>
-                <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
+                <button onclick="toggleDetails('detalles-2')">Ver detalles</button>
 		    <button onclick="agregarAlCarrito('Un girasol Rosita', 80)">Agregar al carrito</button>
-                <div id="detalles-1" class="detalles">
+                <div id="detalles-2" class="detalles">
 	  	        
 
                     <p><strong>Descripción:</strong>un girasol rosado con luces incluidas y una mariposa.</p>
@@ -70,11 +70,13 @@
             </div>  
 
             <div class="categoria">
-                <img src="D:\dg.jpg" alt="Ramo de Rosas Rojas">
+                <img src=dg.jpg alt="Ramo de Rosas Rojas">
                 <h3>Ramo de rosas rojas </h3>
-                <p>$390.00</p>
-                <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
-                <div id="detalles-1" class="detalles">
+                 <p class="precio">$80.00</p>
+                <button onclick="toggleDetails('detalles-3')">Ver detalles</button>
+		    		    <button onclick="agregarAlCarrito('Un girasol Rosita', 80)">Agregar al carrito</button>
+
+                <div id="detalles-3" class="detalles">
                     <p><strong>Descripción:</strong> 14 rosas rojas con papel coreano rojo y dorado y una mariposa dorada.</p>
                     <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 70 ramos</p>
