--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	        <button onclick="agregarAlCarrito('Ramo de rosas convinadas', 380)">Agregar al carrito</button>
 
                   <center> <p><strong>Descripción:</strong> 6 rosas,2 rojas,2 rosas,2 blancas, con papel coreano negro y esquinas trasparentes , y una mariposa tornasol.</p>
-                    <p><strong>Material:</strong>liston rojo,blanco y rosado,palos de madera,unicel,luces,perlitas,mariposa tornasol y papel coreano </p>
+                    <p><strong>Material:</strong>liston rojo,blanco y rosado,palos de madera,unicel,<br>luces,perlitas,mariposa tornasol y papel coreano </p>
                     <p><strong>Ramos disponibles:</strong> 10 </p></center>
                 </div>
             </div> 
