--- a/index.html
+++ b/index.html
@@ -240,11 +240,13 @@
 
 
             <div class="categoria">
-                <img src= "D:\rt.jpg" alt="Rosa">
+                <img src= rt.jpg alt="Rosa">
                 <h3>Rosa eterna </h3>
-                <p>$55.00</p>
-                <button onclick="toggleDetails('detalles-5')">Ver detalles</button>
-                <div id="detalles-5" class="detalles">
+                     <p class="precio">$260</p>
+                <button onclick="toggleDetails('detalles-17')">Ver detalles</button>
+		    		    	 		    		    	        <button onclick="agregarAlCarrito('girasoles', 260)">Agregar al carrito</button>
+
+                <div id="detalles-" class="detalles">
                      <p> Si compras 2 te regalamos 1 ♥♥♥ </p>
                     <p><strong>Descripción:</strong> una  rosa eterna bonita </p>
                     <p><strong>Material:</strong> listones de colores,palitos largos ,cinta color verde</p>
@@ -253,15 +255,18 @@
             </div>
 
             <div class="categoria">
-                <img src=sg.jpg alt="girasol">
-                <h3>Rosa eterna en pluma</h3>
-                <p>$100.00</p>
-                <button onclick="toggleDetails('detalles-6')">Ver detalles</button>
-                <div id="detalles-6" class="detalles">
-                     <p>SI lo compras el 14 de febrero y en 10 de marzo te lo damos a mitad de precio aprobecha </p>
-                    <p><strong>Descripción:</strong> un girasol hermosa para tu persona favorita</p>
-                    <p><strong>Material:</strong> liston amarillo,liston rosa,liston verde ,cinta verde, tul adiamantado, fomi adiamantado, luces bonitas,papel coreano negro y una mariposa plateada </p>
-                    <p><strong>Colores de plumas y de rosas:</strong> azul , morado, verde,rojo,negro,celeste y rosado</p>
+                <img src=sg.jpg alt="girasoles">
+                <h3>girasoles</h3>
+                     <p class="precio">$150</p>
+
+                <button onclick="toggleDetails('detalles-18')">Ver detalles</button>
+		    	 		    		    	        <button onclick="agregarAlCarrito('girasoles', 150)">Agregar al carrito</button>
+
+                <div id="detalles-18" class="detalles">
+                     <p>SI  compras 2 juegos de jirasoles te regalamos uno extra ♥♥ </p>
+                    <p><strong>Descripción:</strong> Gisasoles chicos para de corar tu cuarto y darle un nuevo estilo</p>
+                    <p><strong>Material:</strong> liston amarillo,liston verde ,cinta verde, fomi adiamantado y una mariposa plateada </p>
+                    <p><strong>Juego de girasoles disponibles:</strong>19</p>
                 </div>
             </div>
  <div class="categoria">
