--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
                 <h3>Ramo de rosas convinadas </h3>
       <p class="precio">$380.00</p>
                 <button onclick="toggleDetails('detalles-1')">Ver detalles</button>
+		    	        <button onclick="agregarAlCarrito('Ramo de rosas convinadas', 380)">Agregar al carrito</button>
+
                 <div id="detalles-1" class="detalles">
-	        <button onclick="agregarAlCarrito('Ramo de rosas convinadas', 380)">Agregar al carrito</button>
 
                   <center> <p><strong>Descripción:</strong> 6 rosas,2 rojas,2 rosas,2 blancas, con papel coreano negro y esquinas trasparentes , y una mariposa tornasol.</p>
                     <p><strong>Material:</strong>liston rojo,blanco y rosado,palos de madera,unicel,<br>luces,perlitas,mariposa tornasol y papel coreano </p>
@@ -140,16 +141,16 @@
             </div> 
 
             <div class="categoria">
-                <img src= etg.jpg alt="Ramo de Rosas Rojas">
-                <h3>Ramo de rosas rojas </h3>
-                   <p class="precio">$150.00</p>
+                <img src= etg.jpg alt="Ramo de 10 rosas rojas ">
+                <h3>Ramo de 10 rosas rojas </h3>
+                   <p class="precio">$360.00</p>
                 <button onclick="toggleDetails('detalles-8')">Ver detalles</button>
-				 <button onclick="agregarAlCarrito('Rosita indibidual chiquita rosa ', 150)">Agregar al carrito</button>
+				 <button onclick="agregarAlCarrito('Ramo de 10 rosas rojas ', 360)">Agregar al carrito</button>
 
                 <div id="detalles-8" class="detalles">
-                    <p><strong>Descripción:</strong> 14 rosas rojas con papel coreano rojo y dorado y una mariposa dorada.</p>
-                    <p><strong>Material:</strong>liston rojo,palos de madera y papel coreano </p>
-                    <p><strong>Ramos disponibles:</strong> 70 ramos</p>
+                    <p><strong>Descripción:</strong> 10 rosas rojas con papel coreano trasparente con puntitos negros y dos mariposas tornasol</p>
+                    <p><strong>Material:</strong>liston rojo,palos de madera,unicel,dos mariposas tornasol,perlitas,luces y papel coreano trasparente con puntitos negros</p>
+                    <p><strong>Ramos disponibles:</strong> 3 </p>
                 </div>
             </div>  
 
@@ -158,8 +159,9 @@
                 <h3>Girasol brillante </h3>
                      <p class="precio">$150.00</p>
                 <button onclick="toggleDetails('detalles-9')">Ver detalles</button>
+		    		 <button onclick="agregarAlCarrito('Girasol brillante ', 150)">Agregar al carrito</button>
+
                 <div id="detalles-9" class="detalles">
-		 <button onclick="agregarAlCarrito('Girasol brillante ', 150)">Agregar al carrito</button>
 
                     <p><strong>Descripción:</strong>un bonito girasol brillante para regalerte a esa persona que ilumina tu vida ☻.</p>
                     <p><strong>Material:</strong>liston amalillo,palos de madera,luces,liston verde,liston rosa,tul,fomi adiamantado cafe,una mariposa tornasol y papel coreano negro </p>
