--- a/contacto.html
+++ b/contacto.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>contacto</title>
-	    <link rel="stylesheet" href="milo.css">
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contacto - Rosas Eternas</title>
+  <link rel="stylesheet" href="milo.css">
 </head>
 <body>
-	 <header>
-        <div class="contenedor-img">
-        <img src= melancolia.png>
-	</div>
-            <h1>Rosas Eternas</h1>
-            <p>La belleza que perdura</p>
-        
-        <nav>
-            <ul class="navbar">
-                <li><a href="cool.HTML">Inicio</a></li>
-                <li><a href="index.html">Productos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+  <header>
+    <div class="contenedor-img">
+      <img src="melancolia.png" alt="Logo de Rosas Eternas">
+    </div>
+    <h1>Rosas Eternas</h1>
+    <p>La belleza que perdura</p>
+    <nav>
+      <ul class="navbar">
+        <li><a href="cool.HTML">Inicio</a></li>
+        <li><a href="index.html">Productos</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
+      </ul>
+    </nav>
+  </header>
 
-	<center><b><i><div>
-  <h2 >Gracias por visitar mi página de rosas eternas </h2>
-  
-  <p >
-    Soy <strong>monse</strong>, amante de los detalles que perduran, de las palabras que tocan el alma y de los recuerdos que no se borran.
-  </p>
+  <main>
+    <section class="contacto" style="text-align: center; padding: 2rem;">
+      <h2>Gracias por visitar Rosas Eternas</h2>
+      <p>
+        Soy <strong>Monse</strong>, apasionada por los pequeños detalles que dejan huella, por las palabras que acarician el alma y por los momentos que se vuelven eternos.
+      </p>
+      <p>
+        Cada rosa que encontrarás aquí está diseñada con amor y pensada para durar en el tiempo, como un símbolo de cariño, gratitud o amor eterno.
+      </p>
+      <p>
+        Si alguno de nuestros diseños resonó contigo o si deseas crear algo especial, estaré encantada de ayudarte a dar vida a ese recuerdo inolvidable.
+      </p>
 
-  <p >
-    Si conectaste con algo de lo que viste aquí, o simplemente quieres crear algo único y eterno, ¡me encantaría escucharte!
-  </p>
+      <div class="informacion-contacto" style="margin-top: 2rem;">
+        <h3>¿Quieres ponerte en contacto?</h3>
+        <p><strong>WhatsApp:</strong> 664 360 4682</p>
+        <p><strong>Correo electrónico:</strong> lecturadijital16.@gmail.com</p>
+        <p><strong>Instagram:</strong> <a href="https://instagram.com/monserrat.t_t" target="_blank">@monserrat.t_t</a></p>
+      </div>
 
-  <div >
-    <p><strong>Contáctame:</strong></p>
-    <p> WhatsApp: 6643604682</p>
-    <p> Correo: lecturadijital16.@gmail.com</p>
-    <p> Instagram: @monserrat.t_t</p>
-  </div>
+      <p style="margin-top: 2rem;">
+        Gracias por visitar nuestro sitio web. Esperamos que hayas disfrutado de tu recorrido. ¡Te esperamos pronto con más creaciones llenas de amor y significado!
+      </p>
+    </section>
+  </main>
 
-  <p >
-   Es peramos que te haya guatado este sitio web que tes valla bien y estaremos esperando su visita ☻ 
-   </p>
-</div></b></i>
-
-</center>
- <center> <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p></center>
+  <footer style="text-align: center; padding: 1rem;">
+    <p>&copy; 2025 Rosas Eternas MS. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
+
