--- a/contacto.html
+++ b/contacto.html
@@ -39,7 +39,7 @@
         <h3>¿Quieres ponerte en contacto?</h3>
         <p><strong>WhatsApp:</strong> 664 360 4682</p>
         <p><strong>Correo electrónico:</strong> lecturadijital16.@gmail.com</p>
-        <p><strong>Instagram:</strong> <a href="https://instagram.com/monserrat.t_t" target="_blank">@monserrat.t_t</a></p>
+        <p><strong>Instagram:</strong> <a href="https://instagram.com/flores_eternas_ms.16" target="_blank">@flores_eternas_ms.16</a></p>
       </div>
 
       <p style="margin-top: 2rem;">
